Added chat script for Customer Service CC

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,5 +14,9 @@
     <div class="col"><a href="/deserialize" class="btn btn-secondary w-100">Import from JSON</a></div>
     <div class="col"><a href="/upload" class="btn btn-secondary w-100">Upload DeductionList</a></div>
   </div>
+  <div>
+    Heres a script!
+    <script id="Microsoft_Omnichannel_LCWidget" src="https://oc-cdn-public-eur.azureedge.net/livechatwidget/scripts/LiveChatBootstrapper.js" data-app-id="ef1ae8d9-0e8e-4bae-af84-4bca86f3fafd" data-lcw-version="prod" data-org-id="c1371af4-85f4-ef11-b015-000d3ab8d772" data-org-url="https://m-c1371af4-85f4-ef11-b015-000d3ab8d772.eu.omnichannelengagementhub.com"></script>
+  </div>
 </body>
 </html>
